# ansible-c5-i1

./: Vagrantfile  wordpress.yml
.vagrant/machines/instance-ubuntu/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
.vagrant/provisioners/ansible/inventory/: vagrant_ansible_inventory
roles/redmine-with-ansible/: pyproject.toml
roles/redmine-with-ansible/defaults/: main.yml
roles/redmine-with-ansible/handlers/: main.yml
roles/redmine-with-ansible/molecule/default/: converge.yml  molecule.yml
roles/redmine-with-ansible/tasks/: main.yml
roles/redmine-with-ansible/templates/: database.yml.j2  redmine.service.j2
roles/redmine-with-ansible/tests/: test.yml
roles/redmine-with-ansible/vars/: main.yml
