[project]
name = "redmine-with-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Canaza",email = "mortzkeb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible (==11.0.0)",
    "molecule (==25.1.0)",
    "molecule-vagrant (>=2.0.0,<3.0.0)",
    "python-vagrant (>=1.0.0,<2.0.0)",
    "ansible-lint (>=25.6.1,<26.0.0)",
    "ansible-dev-tools (<25.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
